auth/k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: eks-dev
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - image: vbuxe-dev
          name: auth-service
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: api/users/actuator/health
              port: 8080
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: api/users/actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 60
          resources:
            limits:
              cpu: 200m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 2Gi
          imagePullPolicy: Always
      imagePullSecrets:
        - name: auth-service-secret
        
        #
