auth/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: auth-service
    namespace: eks-dev
  name: auth-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: auth-service
